<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/toolbar_search"
        android:orderInCategory="100"
        android:title="@string/toolbar_search"
        app:showAsAction="collapseActionView|always"
        />
    <item
        android:id="@+id/menu_sort"
        android:icon="@drawable/toolbar_sort"
        android:orderInCategory="600"
        android:title="@string/toolbar_sort"
        app:showAsAction="always" />
    <item
        android:id="@+id/switch_mode"
        android:orderInCategory="100"
        android:title="@string/toolbar_switch"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="100"
        android:title="@string/toolbar_settings"
        app:showAsAction="never" />
</menu>