<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">



    <item
        android:id="@+id/note_detail_delete"
        android:icon="@drawable/note_delete"
        android:orderInCategory="100"
        android:title="@string/note_delete"
        app:showAsAction="collapseActionView|always"/>

    <item
        android:id="@+id/note_detail_album"
        android:icon="@drawable/album"
        app:showAsAction="collapseActionView|always"
        android:title="@string/note_album"
        android:orderInCategory="100"/>



    <item
        android:id="@+id/note_detail_save"
        android:icon="@drawable/note_save_tick"
        android:orderInCategory="100"
        android:title="@string/note_save"
        app:showAsAction="collapseActionView|always"/>





</menu>